chat box z-index bug fix

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,4 +1,5 @@
 .chat-box{
+    z-index:2;
     width:300px;
     height:400px;
     position: fixed;
